<resources>
    <string name="app_name">Movie Roulette</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="confirmEmail">confirm email</string>
    <string name="password">password</string>
    <string name="next">Next</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>