<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpPage"
        android:gravity="center"
        android:id="@+id/linearLayout3">

    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:includeFontPadding="false"
            style="@style/TitleText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:id="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/editTextTextEmailAddress"
                android:hint="@string/email"
                android:layout_margin="10dp"
                android:layout_height="match_parent"
                android:autofillHints="email"
                android:ems="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:id="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:id="@+id/editTextTextEmailAddress2"
                android:hint="@string/confirmEmail"
                android:layout_margin="10dp"
                android:autofillHints="email"
                android:ems="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:id="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/editTextTextPassword"
                android:hint="@string/password"
                android:layout_margin="10dp"
                android:autofillHints="password"
                android:ems="10"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/next"
            android:id="@+id/button"
            style="@style/LargeButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>